[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/scripts/Horse.gd" type="Script" id=1]
[ext_resource path="res://ui/scripts/ProceduralHorse.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.6
height = 2.0

[sub_resource type="SphereShape" id=2]
radius = 2.5

[node name="Horse" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0, 0 )
shape = SubResource( 1 )

[node name="ProceduralMesh" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="MountPoint" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, -0.2 )

[node name="InteractionArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="InteractionArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -0.5 )
shape = SubResource( 2 )
